fix: upgrades from old ways
